tests/reference/asr-incorrect_type_where_04-f7dffdb.stderr
semantic error: The RHS character len must be known at compile time
 --> tests/errors/incorrect_type_where_04.f90:3:4
  |
3 |    character(5), parameter :: c = "hello"
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
